<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_cd_paper"
    tools:context=".RestaurantDhActivity">

    <ImageView
        android:id="@+id/imv_photo"
        android:layout_width="159dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="nextActivity33"
        android:src="@drawable/ic_anber" />

    <TextView
        android:id="@+id/txv_name_parking"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/color_vin"
        android:fontFamily="cursive"
        android:text="@string/txv_hotel"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22dp" />

    <Button
        android:id="@+id/btn_map"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_below="@+id/txv_name_parking"
        android:layout_toEndOf="@+id/imv_photo"
        android:layout_toRightOf="@+id/imv_photo"
        android:background="@color/color_sqrt"
        android:backgroundTint="@color/blue"
        android:onClick="nextActivity33"
        android:text="Ver mapa" />


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@+id/btn_map"
        android:layout_toLeftOf="@+id/txv_price"
        android:layout_toStartOf="@+id/txv_price"
        app:srcCompat="@drawable/ic_home" />

    <TextView
        android:id="@+id/txv_direcction"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView"
        android:text="@string/direcction"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="12dp"
        android:layout_toLeftOf="@+id/txv_direcction"
        android:layout_toStartOf="@+id/txv_direcction"
        app:srcCompat="@drawable/ic_phone" />

    <TextView
        android:id="@+id/txv_price"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />

    <View
        android:id="@+id/ruler"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="34dp"
        android:background="@color/color_gray" />

    </RelativeLayout>


